--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+Cython==0.29.23
+Flask==2.0.1
 gunicorn==20.1.0
+numpy==1.20.3
+pandas==1.2.4
+pickle-mixin==1.0.2
+requests==2.23.0
+scikit-learn==0.24.2
+scipy==1.6.3
